# obj-wasm

./: Cargo.toml  LICENSE_MIT  README.md  notes.org
src/: data.rs  lib.rs  mtlreader.rs  parser.rs  reader.rs  scene.rs
